--- a/src/arm/rk3288-vyasa.dts
+++ b/src/arm/rk3288-vyasa.dts
@@ -82,6 +82,11 @@
 	cpu0-supply = <&vdd_cpu>;
 };
 
+&gpu {
+	mali-supply = <&vdd_gpu>;
+	status = "okay";
+};
+
 &hdmi {
 	ddc-i2c-bus = <&i2c2>;
 	status = "okay";
